--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -347,6 +347,7 @@ nav:
       - MixtureOfAgents Example: "swarms/examples/mixture_of_agents.md"
       - Unique Swarms: "swarms/examples/unique_swarms.md"
       - Agents as Tools: "swarms/examples/agents_as_tools.md"
+      - Deep Research News Aggregator: "swarms/examples/deep_research_news_aggregator.md"
       - Applications:
         - Swarms DAO: "swarms/examples/swarms_dao.md"
         - Swarms of Browser Agents: "swarms/examples/swarms_of_browser_agents.md"
