docs: fix newline in agent MCP example

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -308,6 +308,7 @@ nav:
   - Examples:
     - Overview: "examples/index.md"
     - CookBook Index: "examples/cookbook_index.md"
+    - Multiple MCP Tool Execution: "examples/multiple_mcp_tool_execution.md"
     - Customizing Agents:
       - Basic Agent: "swarms/examples/basic_agent.md"
       - Agents with Callable Tools: "swarms/examples/agent_with_tools.md"
